working calculator, no verification or error checking

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="display">Display</div>
+      <div class="display"></div>
       <button class="clear" onClick="reset()">Clear</button>
       <div class="row">
         <button class="number" value="7" onClick="updateInputNums(this.value)">7</button>
